--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- RAP -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +9,7 @@
  
 </head>
 <body>
- 
+    
     <div id="mortgageCalculator">
         <h2>Mortgage Calculator</h2>
         <label for="principal">Principal Amount:</label>
